--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 project(csplit CXX)
 
 add_subdirectory(src)
+add_subdirectory(src/core)
 
 #enable_testing()
 #add_subdirectory(test)
