--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,4 @@ add_executable(csplit
                csplit.m.cpp)
                
 find_package(spdlog CONFIG REQUIRED)
-target_link_libraries(csplit PRIVATE spdlog::spdlog)
+target_link_libraries(csplit PRIVATE spdlog::spdlog csplit_core)
