Add new functions elapsed and elapsedSince

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(csplit_core timer.cpp
+add_library(csplitcore timer.cpp
                         timerutils.cpp)
 
 find_package(spdlog CONFIG REQUIRED)
-target_link_libraries(csplit_core PRIVATE spdlog::spdlog)
+target_link_libraries(csplitcore PRIVATE spdlog::spdlog)
