Add some tests for split update behaviour

--- a/tests/core/CMakeLists.txt
+++ b/tests/core/CMakeLists.txt
@@ -4,4 +4,7 @@ add_executable(csplitcore.t.tsk
 
 find_package(GTest MODULE REQUIRED)
 find_package(GMock MODULE REQUIRED)
-target_link_libraries(csplitcore.t.tsk PRIVATE GTest::GTest GMock::GMock)
+target_link_libraries(csplitcore.t.tsk PRIVATE GTest::GTest GMock::GMock csplitcore)
+target_include_directories(csplitcore.t.tsk PRIVATE 
+                           ${PROJECT_SOURCE_DIR}/src 
+                           ${PROJECT_SOURCE_DIR}/include)
