Custom logging for Split

--- a/tests/core/CMakeLists.txt
+++ b/tests/core/CMakeLists.txt
@@ -4,7 +4,8 @@ add_executable(csplitcore.t.tsk
 
 find_package(GTest MODULE REQUIRED)
 find_package(GMock MODULE REQUIRED)
-target_link_libraries(csplitcore.t.tsk PRIVATE GTest::GTest GMock::GMock csplitcore)
+find_package(spdlog CONFIG REQUIRED)
+target_link_libraries(csplitcore.t.tsk PRIVATE GTest::GTest GMock::GMock spdlog::spdlog csplitcore)
 target_include_directories(csplitcore.t.tsk PRIVATE 
                            ${PROJECT_SOURCE_DIR}/src 
                            ${PROJECT_SOURCE_DIR}/include)
