--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -5,5 +5,5 @@ add_library(csplitcore timer.cpp
 
 find_package(spdlog CONFIG REQUIRED)
 target_include_directories(csplitcore PUBLIC ${PROJECT_SOURCE_DIR}/include)
-target_link_libraries(csplitcore PRIVATE spdlog::spdlog)
+target_link_libraries(csplitcore PUBLIC spdlog::spdlog)
 target_compile_features(csplitcore PUBLIC cxx_std_17)
