Add tests for TimeAttackSplitter + skip split functionality

--- a/tests/core/CMakeLists.txt
+++ b/tests/core/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(csplitcore.t.tsk
                csplitcore.t.cpp
+               timeattacksplitter.t.cpp
                split.t.cpp)           
 
 find_package(GTest MODULE REQUIRED)
