Add Split equality + tests for adhocsplitter

--- a/tests/core/CMakeLists.txt
+++ b/tests/core/CMakeLists.txt
@@ -1,11 +1,12 @@
 add_executable(csplitcore.t.tsk
                csplitcore.t.cpp
                timeattacksplitter.t.cpp
-               split.t.cpp)           
+               adhocsplitter.t.cpp
+               split.t.cpp)
 
 find_package(GTest MODULE REQUIRED)
 find_package(GMock MODULE REQUIRED)
 target_link_libraries(csplitcore.t.tsk PRIVATE GTest::GTest GMock::GMock csplitcore)
-target_include_directories(csplitcore.t.tsk PRIVATE 
-                           ${PROJECT_SOURCE_DIR}/src 
+target_include_directories(csplitcore.t.tsk PRIVATE
+                           ${PROJECT_SOURCE_DIR}/src
                            ${PROJECT_SOURCE_DIR}/include)
