Change Timer to be an interface for testability

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(csplitcore timer.cpp
                        splitter.cpp
                        adhocsplitter.cpp
                        timeattacksplitter.cpp
+                       steadytimer.cpp
                        )
 
 find_package(spdlog CONFIG REQUIRED)
