Add test for steady timer

--- a/tests/core/CMakeLists.txt
+++ b/tests/core/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(csplitcore.t.tsk
                adhocsplitter.t.cpp
                speedrun.t.cpp
                fakeclock.cpp
+               steadytimer.t.cpp
                split.t.cpp)
 
 find_package(GTest MODULE REQUIRED)
